--- a/main.css
+++ b/main.css
@@ -83,7 +83,7 @@ button {
 .form__container {
   width: 550px
 }
-  
+ 
 .form {
   background-color: #1d263a;
   color: #fff;
@@ -93,12 +93,13 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .form h1 {
   font-size: 48px;
 }
-  
+
 .form p {
   font-size: 18px;
   opacity: 0.65;
@@ -108,4 +109,92 @@ button {
   display: flex;
   flex-direction: column;
   text-align: left;
+  }
+
+.form form {
+  display: grid;
+  grid-gap: 20px;
+  margin-top: 60px;
+}
+
+.form label {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+
+.form input {
+  font-size: 18px;
+  color: #213053;
+  height: 60px;
+  padding: 0 20px;
+  border-radius: 15px;
+  border: none;
+}
+
+.form select {
+  font-size: 18px;
+  color: #213053;
+  height: 60px;
+  padding: 0 20px;
+  border-radius: 15px;
+  border: none;
+}
+
+.form__submit {
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 40px;
+}
+
+select {
+  appearance: none;
+}
+
+input {
+  outline: none;
+}
+
+button:hover {
+  background-color: #f6980c;
+  box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+  transition: background-color 0.3s ease-in
+}
+
+footer {
+  padding: 90px 20px;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.footer__container {
+  display: flex;
+  justify-content: center;
+}
+
+.footer__copyright {
+  margin-top: 40px;
+  text-align: center;
+  opacity: 0.5;
+  display: flex;
+  justify-content: center
+}
+
+.footer__group {
+  margin-right: 80px;
+}
+
+.footer__group h3 {
+  font-size: 16px;
+  opacity: 0.7;
+  margin-bottom: 30px;
+}
+
+.footer__links {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__links a {
+  margin-bottom: 15px;
 }
