--- a/main.css
+++ b/main.css
@@ -92,3 +92,72 @@ button {
     flex-direction: column;
     text-align: left;
 }
+.form form {
+    display: grid;
+    grid-gap: 20px;
+    margin-top: 60px;
+}
+.form label {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+.form input {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0px 20px 0px 20px;
+    border-radius: 15px;
+    border: none;
+}
+.form select {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0px 20px 0px 20px;
+    border-radius: 15px;
+    border: none;
+}
+.form__submit {
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 40px;
+}
+select {
+    appearance: none;
+}
+input {
+    outline: none;
+}
+button:hover {
+    background-color: #f6980c;
+    box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+    transition: background-color 0.3s ease;
+}
+footer {
+    padding: 90px 20px;
+    font-size: 16px;
+    font-weight: 600;
+}
+.footer__links {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+}
+.footer__copyright {
+    margin-top: 40px;
+    text-align: center;
+    opacity: 0.5;
+    display: flex;
+    justify-content: center;
+}
+.footer__group {
+    margin-right: 80px;
+    font-size: 16px;
+    opacity: 0.7;
+    margin-bottom: 30px;
+}
+.footer__container {
+    display: flex;
+    justify-content: center;
+}
