--- a/main.css
+++ b/main.css
@@ -132,7 +132,7 @@ input {
 button:hover {
     background-color: #f6980c;
     box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease-in;
 }
 footer {
     padding: 90px 20px;
