--- a/main.css
+++ b/main.css
@@ -8,6 +8,10 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    position: sticky;
+    background: white;
+    top: 0;
+    z-index: 1;
 }
 .header__logo {
     height: 30px;
@@ -38,6 +42,8 @@ button {
 .about__sun-image {
     width: 100px;
     height: 100px;
+    animation: rotation 10s infinite linear;
+    position: absolute;
 }
 .about {
     display: flex;
@@ -106,7 +112,7 @@ button {
     font-size: 18px;
     color: #213053;
     height: 60px;
-    padding: 0px 20px 0px 20px;
+    padding: 0 20px 0 20px;
     border-radius: 15px;
     border: none;
 }
@@ -114,7 +120,7 @@ button {
     font-size: 18px;
     color: #213053;
     height: 60px;
-    padding: 0px 20px 0px 20px;
+    padding: 0 20px 0 20px;
     border-radius: 15px;
     border: none;
 }
@@ -161,3 +167,61 @@ footer {
     display: flex;
     justify-content: center;
 }
+@keyframes rotation {
+    0% {transform: rotate(0);}
+    100% { transform: rotate(360deg);}
+}
+@media (max-width:720px) {
+    header {
+        padding: 10px;
+    }
+    header a {
+        margin-top: 10px;
+    }
+    .header__logo {
+        height: 20px;
+    }
+    .about {
+        flex-direction: column-reverse;
+        padding: 50px 10px;
+    }
+    .about h1 {
+        font-size: 36px;
+        line-height: 40px;
+    }
+    .about__image {
+        width: 280px;
+    }
+    .about__sun-image {
+        width: 75px;
+        height: 75px;
+    }
+    .form {
+        padding: 50px 10px;
+    }
+    .form h1 {
+        font-size: 36px;
+    }
+    footer {
+        padding: 50px 10px;
+    }
+    .footer__container {
+        flex-direction: column;
+    }
+}
+@media (max-width: 1024px) {
+    .about {
+        padding: 115px 20px;
+    }
+    .about h1 {
+        font-size: 36px;
+        line-height: 40px;
+    }
+    .about__image {
+        width: 280px;
+    }  
+    .about__sun-image {
+        width: 75px;
+        height: 75px;
+    }
+ }
